# Saisonmanager-Gamescore-Tracker

./: App.py  README.md  main.go  main.py
.github/workflows/: ci.yml  main.yml  pyproject.toml  release.yml
